most touch ups done 1. fixed a bug that occurred when you try to have an empty search on currentweather which would break the page - there are two different error codes for the API; one if there is an invalid city search, and one if there is an empty search with 'cod' having two different values - updated logic to run data.cod being equal to either values and fixed the error 2. finishing touches to be done to about section along with responsive design for it tomorrow 3. to write readme and update projectworksheet files tomorrow

--- a/connected-app/src/App.css
+++ b/connected-app/src/App.css
@@ -195,19 +195,20 @@ footer button:hover {
 
 /* About styling */
 
-
+.aboutdescription {
+  font-family: 'Nunito', sans-serif;
+}
 
 
 
 /* CurrentTime styling */
-
-
+/* shared near top of CSS */
 
 
 
 /* TABLET DESIGN */
 @media screen and (min-width: 760px) {
-
+/* no specific changes for tablet design */
 }
 
 /* DESKTOP DESIGN */
