--- a/connected-app/src/index.css
+++ b/connected-app/src/index.css
@@ -14,3 +14,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+main {
+  margin-left: 5px;
+  margin-right: 5px;
+}
